添加vue.config.js配置

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,8 @@
+#production
+
+
+ VUE_APP_NODE_ENV = 'production'
+
+ VUE_APP_PACKAGE_NAME = 'production'
 
  VUE_APP_BASE_API = 'http://47.115.39.36:12340/tutorial/'
