--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,8 @@
+ #development
+
+ VUE_APP_NODE_ENV = 'development'
+
+ 
+ VUE_APP_PACKAGE_NAME = 'development'
+
  VUE_APP_BASE_API = 'http://47.115.39.36:12340/tutorial/'
